# k2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _clang-format  clang-format-all.sh  k2.sublime-workspace
docs/: Doxyfile.in  DoxygenLayout.xml
resources/: perf_notes
src/: CMakeLists.txt  Makefile  k2_engine.h  main.c
src/board/: board.c  board.h  piece.c  piece.h  square.c  square.h
src/board/bitboard/: bitboard.c  bitboard.h  occupancy_mask.c  occupancy_mask.h
src/board/bitboard/occ_mask_gen/: occ_mask_gen.c  occ_mask_gen.h
src/fen/: fen.c  fen.h
src/lab/: READ_ME  bench_runner.c
src/libs/core/: README
src/libs/fen/: README
src/move/: make_move.c  make_move.h  move.c  move.h  move_gen.c  move_gen.h  move_list.c  move_list.h  score.h
src/perft/: perft.c  perft.h  perft_file_reader.c  perft_file_reader.h  perft_runner.c  perft_runner.h
src/position/: attack_checker.c  attack_checker.h  castle_perms.c  castle_perms.h  evaluate.c  evaluate.h  hashkeys.c  hashkeys.h  move.c  move.h  move_hist.c  move_hist.h  position.c  position.h  position_hist.c  position_hist.h
src/position/evaluation/: basic_evaluator.c  basic_evaluator.h
src/position/search/: alpha_beta.c  alpha_beta.h  pv_table.c  pv_table.h  quiesence.c  quiesence.h  search.c  search.h  transposition_table.c  transposition_table.h
src/stats/: stats.c  stats.h
src/utils/: rand.c  rand.h  utils.c  utils.h
test/: CMakeLists.txt  Makefile  README  k2_test  seatest.c  seatest.h  test_bitboard.c  test_bitboard.h  test_board.c  test_board.h  test_castle_permissions.c  test_castle_permissions.h  test_fen.c  test_fen.h  test_launcher.c  test_launcher.h  test_move.c  test_move.h  test_move_gen.c  test_move_gen.h  test_move_list.c  test_move_list.h  test_piece.c  test_piece.h  test_position.c  test_position.h  test_square.c  test_square.h  test_utils.c  test_utils.h
test/board/: test_board.c  test_board.h  test_piece.c  test_piece.h  test_square.c  test_square.h
test/board/bitboard/: test_bitboard.c  test_bitboard.h
test/fen/: test_fen.c  test_fen.h
test/move/: test_move.c  test_move.h  test_move_gen.c  test_move_gen.h  test_move_list.c  test_move_list.h
test/perft/: test_perft.c  test_perft.h
test/position/: test_attack_checker.c  test_attack_checker.h  test_castle_permissions.c  test_castle_permissions.h  test_hashkeys.c  test_hashkeys.h  test_move_hist.c  test_move_hist.h  test_position.c  test_position.h  test_position_hist.c  test_position_hist.h
test/position/evaluation/: test_basic_evaluator.c  test_basic_evaluator.h
test/position/search/: test_transposition_table.c  test_transposition_table.h
tools/: bitboard_gen.py
